gke/ingress-nginx/cert-handler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: qpa
  name: cert-handler-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#TODO: re-enable custom cert
#    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: ignored-rule-host
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: xxx-discard-this-path-xxx
                port:
                  number: 65535
#TODO: re-enable custom cert
#  tls:
#    - hosts:
#        # For client-ingress
#        - schq.party
#        - www.schq.party
#
#        # For protected-ingress
#        - client.schq.party
#        - server.schq.party
#        - filehost.schq.party
#        - adminer.schq.party
#        - grafana.schq.party
#        - prometheus.schq.party
#      secretName: schq-party-tls-cert-secret
