gke/ingress-nginx/client-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: qpa
  name: client-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/limit-rpm: "400"

    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
    - host: schq.party
      http:
        paths:
          - path: /?(.*)(.*)
            pathType: Exact
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3000
  tls:
    - hosts:
        - schq.party
        - www.schq.party
      secretName: schq-party-tls-cert-secret
