gke/ingress-nginx/filehost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: qpa
  name: filehost-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/rewrite-target: /api/exposed/$1
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
spec:
  rules:
    - host: schq.party
      http:
        paths:
          - path: /?filehost/(.*)
            pathType: Exact
            backend:
              service:
                name: filehost-cluster-ip
                port:
                  number: 4200
