gke/ingress-nginx/protected-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: qpa
  name: protected-ingress
  annotations:
    kubernetes.io/ingress.class: nginx

    nginx.ingress.kubernetes.io/rewrite-target: /$1$2
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"

    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: protected-ingress-basic-auth-secret
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - Protected Resource'
spec:
  rules:
    - host: client.schq.party
      http:
        paths:
          - path: /?(.*)()
            pathType: Exact
            backend:
              service:
                name: client-cluster-ip
                port:
                  number: 3000
    - host: server.schq.party
      http:
        paths:
          - path: /?(.*)()
            pathType: Exact
            backend:
              service:
                name: server-cluster-ip
                port:
                  number: 8080
    - host: adminer.schq.party
      http:
        paths:
          - path: /?(.*)()
            pathType: Exact
            backend:
              service:
                name: adminer-cluster-ip
                port:
                  number: 8080
  tls:
    - hosts:
        - client.schq.party
        - server.schq.party
        - filehost.schq.party
        - adminer.schq.party
        - grafana.schq.party
        - prometheus.schq.party
      secretName: schq-party-tls-cert-secret
